--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "install-all": "npm install && cd frontend && npm install"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^6.0.12",
-    "cors": "^2.8.5",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/s3-request-presigner": "^3.717.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^8.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "googleapis": "^92.0.0",
-    "dotenv": "^10.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
