--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "googleapis": "^92.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
