--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "tailwind-gradient-mask-image": "^1.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
