--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.0.17",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "lucide-react": "^0.469.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
